# gladius

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/lib/: Cargo.toml
crates/lib/src/: constants.rs  full_setup.rs  lib.rs  load_config.rs  logger_setup.rs  navcomp_loader.rs  paradigm.rs  providers.rs  real_navcomp_loader.rs  run_gladius.rs
crates/lib/src/big_tests/: mod.rs
crates/lib/src/big_tests/completion/: completion_test_1.rs
crates/lib/src/big_tests/dropping_cursor/: dropping_cursor_test_1.rs
crates/lib/src/big_tests/find_replace/: find_replace.rs
crates/lib/src/big_tests/fuzzy_file_open/: fuzzy_file_open_test.rs
crates/lib/src/big_tests/integration/: integration_test_1.rs
crates/lib/src/big_tests/save/: save.rs
crates/lib/src/big_tests/save_file_dialog/: save_file_dialog.rs
crates/lib/src/big_tests/show_usages/: show_usages_test_1.rs
crates/lib/src/big_tests/syntax_highlighting/: syntax_highlighting_test_1.rs
crates/placeholder/src/: lib.rs
